[gd_scene load_steps=10 format=3 uid="uid://buxnuaci83en4"]

[ext_resource type="PackedScene" uid="uid://ctb8oa2wm3r0u" path="res://assets/scenes/objects/entities/base_entity.tscn" id="1_37wwl"]
[ext_resource type="Script" path="res://assets/code/Enemies/tree_stump_enemy.gd" id="2_1lvg2"]
[ext_resource type="Texture2D" uid="uid://chx5qnbxk3vao" path="res://assets/sprites/enemies/TreeAdd_0000-sheet.png" id="3_11ihq"]
[ext_resource type="PackedScene" path="res://assets/scenes/Attacks/explosion_attack.tscn" id="4_6ag1r"]

[sub_resource type="Animation" id="Animation_je1a3"]
resource_name = "Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_bs5qc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_1nqcv"]
resource_name = "Run"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [2, 3, 4]
}

[sub_resource type="Animation" id="Animation_6qjgs"]
resource_name = "Explode"
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.25, 0.35, 0.45, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_souw4"]
_data = {
"Explode": SubResource("Animation_6qjgs"),
"Idle": SubResource("Animation_je1a3"),
"RESET": SubResource("Animation_bs5qc"),
"Run": SubResource("Animation_1nqcv")
}

[node name="TreeStumpEnemy" instance=ExtResource("1_37wwl")]
script = ExtResource("2_1lvg2")
fuse_time = 4.0
speedup = 0.0045

[node name="Sprite3D" parent="." index="0"]
billboard = 1
texture = ExtResource("3_11ihq")
hframes = 6
vframes = 2

[node name="AnimationPlayer" parent="." index="5"]
libraries = {
"": SubResource("AnimationLibrary_souw4")
}

[node name="ExplosionAttack" parent="." index="6" instance=ExtResource("4_6ag1r")]
transform = Transform3D(3.705, 0, 0, 0, 3.705, 0, 0, 0, 3.705, 0.0127068, 0.0133667, 2.59192)

[node name="FuseTimer" type="Timer" parent="." index="7"]
process_callback = 0
one_shot = true

[connection signal="timeout" from="FuseTimer" to="." method="_on_fuse_timer_timeout"]
